# safe_bindgen

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-BSD  LICENSE-MIT  README.md  README.tpl  deleteme.trash
examples/: pointer.rs  safe_client_libs.rs  stack.rs
resources/csharp/: Utilities.cs  Utils.cs.template
src/: common.rs  errors.rs  lang_c.rs  lang_java.rs  lib.rs  output.rs  parse.rs  struct_field.rs  test_utils.rs  types.rs  types_java.rs
src/csharp/: emit.rs  intermediate.rs  mod.rs  tests.rs
src/java/: jni.rs  mod.rs  types.rs
src/lang_c/: mod.rs  tests.rs  types.rs
tests/: lib.rs
