[package]
name = "safe_bindgen"
version = "0.5.0"
authors = ["Sean Marshallsay <srm.1708@gmail.com>",
           "Matthew Gregan <kinetik@flim.org>",
           "MaidSafe Developers <dev@maidsafe.net>"]

description = "A library to automatically generate C and Java files from Rust source files."
readme = "README.md"
keywords = ["c", "header", "ffi"]

homepage = "https://github.com/mozilla/moz-cheddar"
repository = "https://github.com/mozilla/moz-cheddar"
documentation = "https://docs.rs/moz-cheddar"

license = "MIT"

[features]
default = ["with-syntex"]
with-syntex = [
    "syntex_errors",
    "syntex_syntax",
]

[lib]
name = "safe_bindgen"
path = "src/lib.rs"

[[bin]]
name = "bindgen"
doc = false
path = "src/bin/bindgen.rs"

[dependencies]
syntex_errors = {version = "~0.58.1", optional = true}
syntex_syntax = {version = "~0.58.1", optional = true}
toml = "~0.3.2"
clap = "~2.25.1"
Inflector = "~0.11.1"
# jni = "~0.10.0"
# TODO: return this back to the original dependency when our changes are merged upstream
jni = { git = "https://github.com/nbaksalyar/jni-rs.git", branch = "master" }
quote = "~0.3.15"
rustfmt = "~0.10.0"
unwrap = "~1.1.0"

[dev-dependencies]
colored = "~1.6.0"
diff = "~0.1.11"
indoc = "~0.2.3"
