[package]
name = "safe_bindgen"
version = "0.11.0"
authors = ["Sean Marshallsay <srm.1708@gmail.com>",
           "Matthew Gregan <kinetik@flim.org>",
           "MaidSafe Developers <dev@maidsafe.net>"]

description = "A library to automatically generate C and Java files from Rust source files."
readme = "README.md"
keywords = ["c", "header", "ffi"]

homepage = "https://github.com/maidsafe/safe_bindgen"
repository = "https://github.com/maidsafe/safe_bindgen"
documentation = "https://docs.rs/safe_bindgen"

license = "MIT OR BSD-3-Clause"
edition = "2018"

[features]
default = ["with-syntex"]
with-syntex = [
    "syntex_errors",
    "syntex_syntax",
]

[lib]
name = "safe_bindgen"
path = "src/lib.rs"

[[bin]]
name = "bindgen"
doc = false
path = "src/bin/bindgen.rs"

[dependencies]
syntex_errors = {version = "~0.59.1", optional = true}
syntex_syntax = {version = "~0.59.1", optional = true}
toml = "~0.4.6"
clap = "~2.25.1"
Inflector = "~0.11.3"
jni = "~0.10.1"
quote = "~0.6.11"
rustfmt = "~0.10.0"
petgraph = "~0.4.13"
unwrap = "~1.2.0"
syn = {version = "0.15.26", features = ["parsing","full","derive","proc-macro","extra-traits"]}
proc-macro2 = "~0.4.27"

[dev-dependencies]
colored = "~1.6.0"
diff = "~0.1.11"
indoc = "~0.2.3"
